@@ -1,26 +1,30 @@
 package keeper.project.homepage.service.member;
 
 import java.time.LocalDate;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.Date;
-import keeper.project.homepage.entity.posting.CategoryEntity;
-import keeper.project.homepage.entity.posting.CommentEntity;
+import java.util.List;
 import keeper.project.homepage.entity.member.MemberEntity;
 import keeper.project.homepage.entity.member.MemberHasCommentEntityPK;
 import keeper.project.homepage.entity.member.MemberHasCommentLikeEntity;
+import keeper.project.homepage.entity.member.MemberHasMemberJobEntity;
+import keeper.project.homepage.entity.member.MemberJobEntity;
+import keeper.project.homepage.entity.posting.CategoryEntity;
+import keeper.project.homepage.entity.posting.CommentEntity;
 import keeper.project.homepage.entity.posting.PostingEntity;
+import keeper.project.homepage.repository.member.MemberHasCommentLikeRepository;
+import keeper.project.homepage.repository.member.MemberJobRepository;
+import keeper.project.homepage.repository.member.MemberRepository;
 import keeper.project.homepage.repository.posting.CategoryRepository;
 import keeper.project.homepage.repository.posting.CommentRepository;
-import keeper.project.homepage.repository.member.MemberHasCommentLikeRepository;
-import keeper.project.homepage.repository.member.MemberRepository;
 import keeper.project.homepage.repository.posting.PostingRepository;
-import keeper.project.homepage.service.member.MemberHasCommentLikeService;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -28,6 +32,9 @@ import org.springframework.transaction.annotation.Transactional;
 @SpringBootTest
 @Transactional
 public class MemberHasCommentLikeServiceTest {
+
+  @Autowired
+  private PasswordEncoder passwordEncoder;
 
   @Autowired
   private MemberHasCommentLikeRepository memberHasCommentLikeRepository;
@@ -45,12 +52,22 @@ public class MemberHasCommentLikeServiceTest {
   private MemberRepository memberRepository;
 
   @Autowired
+  private MemberJobRepository memberJobRepository;
+
+  @Autowired
   private MemberHasCommentLikeService memberHasCommentLikeService;
 
   private CommentEntity commentEntity;
   private CommentEntity parentComment;
   private MemberEntity memberEntity;
   private MemberHasCommentLikeEntity memberHasCommentLikeEntity;
+
+  final private String loginId = "hyeonmomo";
+  final private String password = "keeper";
+  final private String realName = "JeongHyeonMo";
+  final private String nickName = "JeongHyeonMo";
+  final private String emailAddress = "gusah@naver.com";
+  final private String studentId = "201724579";
 
   private LocalDate registerTime = LocalDate.now();
   private LocalDate updateTime = LocalDate.now();
@@ -60,14 +77,21 @@ public class MemberHasCommentLikeServiceTest {
 
   @BeforeEach
   public void setup() {
-    memberEntity = memberRepository.save(MemberEntity.builder()
-        .loginId("로그인")
-        .password("비밀번호")
-        .realName("이름")
-        .nickName("닉네임")
-        .emailAddress("이메일")
-        .studentId("학번")
-        .roles(Collections.singletonList("ROLE_USER")).build());
+    MemberJobEntity memberJobEntity = memberJobRepository.findByName("ROLE_회원").get();
+    MemberHasMemberJobEntity hasMemberJobEntity = MemberHasMemberJobEntity.builder()
+        .memberJobEntity(memberJobEntity)
+        .build();
+    memberEntity = MemberEntity.builder()
+        .loginId(loginId)
+        .password(passwordEncoder.encode(password))
+        .realName(realName)
+        .nickName(nickName)
+        .emailAddress(emailAddress)
+        .studentId(studentId)
+        .memberJobs(new ArrayList<>(List.of(hasMemberJobEntity)))
+        .build();
+    memberRepository.save(memberEntity);
+
     CategoryEntity categoryEntity = categoryRepository.save(
         CategoryEntity.builder().name("test category").build());
 
